--- a/app/src/main/res/layout-v23/activity_registration.xml
+++ b/app/src/main/res/layout-v23/activity_registration.xml
@@ -10,8 +10,7 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:padding="16dp">
+        android:orientation="vertical">
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/nameWrapper"
