--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -89,7 +89,8 @@
         <Spinner
             android:id="@+id/spinner"
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:background="@drawable/spinner_border">
 
         </Spinner>
 
