--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#fd3f5bb5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#161515</color>
+    <color name="colorPrimaryDark">#161515</color>
     <color name="colorAccent">#f5f5f5</color>
     <color name="colorBackgroundCard">#424242</color>
     <color name="colorBackground">#161515</color>
