--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,8 @@
     android:id="@+id/drawer_layout"
     tools:openDrawer="start">
 
+    <include layout="@layout/activity_share_market"/>
+
     <android.support.design.widget.NavigationView
         android:id="@+id/nav_menu"
         android:layout_width="wrap_content"
