--- a/app/src/main/res/layout/share_market.xml
+++ b/app/src/main/res/layout/share_market.xml
@@ -21,6 +21,14 @@
         app:cardCornerRadius="10dp">
 
 
+        <TextView
+            android:id="@+id/tv_date_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="25sp"
+            android:text="@string/date_and_time"/>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
