--- a/app/src/main/res/layout/share_market.xml
+++ b/app/src/main/res/layout/share_market.xml
@@ -7,7 +7,7 @@
     android:background="@color/colorBackground"
     android:orientation="vertical"
     android:paddingBottom="10dp"
-    tools:context=".MainActivity">
+    tools:context=".Activities.MainActivity">
 
 
     <android.support.v7.widget.CardView
