--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -16,14 +16,17 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_marginBottom="24dp"
+            android:layout_marginTop="24dp"
             android:contentDescription="@string/app_logo"
-            android:src="@mipmap/ic_launcher"
-            android:visibility="gone" />
+            android:src="@mipmap/ic_launcher" />
 
         <android.support.design.widget.TextInputLayout
             android:id="@+id/nameWrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
             android:textColorHint="@color/colorTextHint"
             app:counterEnabled="true"
             app:counterTextAppearance="@style/CounterStyle"
@@ -43,6 +46,7 @@
             android:id="@+id/emailWrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
             android:textColorHint="@color/colorTextHint"
             app:counterEnabled="true"
             app:counterTextAppearance="@style/CounterStyle"
@@ -62,6 +66,7 @@
             android:id="@+id/mobileWrapper"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="24dp"
             android:textColorHint="@color/colorTextHint"
             app:counterEnabled="true"
             app:counterTextAppearance="@style/CounterStyle"
@@ -83,7 +88,7 @@
             android:id="@+id/spinner"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="16dp"
+            android:layout_marginBottom="24dp"
             android:background="@drawable/spinner_border" />
 
         <android.support.v7.widget.AppCompatButton
