--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="colorTextInput">#E0E0E0</color>
     <color name="colorTextHint">#98aab8</color>
     <color name="colorTextDialog">#223a4c</color>
+    <color name="colorButtonBackground">#2e2e52</color>
 
 
 </resources>
