--- a/app/src/main/res/drawable/spinner_border.xml
+++ b/app/src/main/res/drawable/spinner_border.xml
@@ -13,7 +13,7 @@
                 </shape>
             </item>
             <item>
-                <bitmap android:gravity="bottom|right" android:src="@drawable/double_down" />
+                <bitmap android:gravity="bottom|right" android:src="@drawable/drop_down" />
             </item>
         </layer-list>
 
