--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -67,6 +67,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColorHint="@color/colorTextHint"
+            android:layout_marginBottom="20dp"
             app:counterEnabled="true"
             app:counterTextAppearance="@style/CounterStyle"
             app:errorTextAppearance="@style/WelcomeErrorAppearance">
@@ -97,7 +98,7 @@
             android:layout_marginBottom="56dp"
             android:background="@color/colorButtonBackground"
             android:text="@string/submit"
-            android:textColor="@color/colorTextInput" />
+            android:textColor="@color/colorTextHint" />
 
     </LinearLayout>
 
